# example_models

./: OrmExamples.ipynb  README.md  manage.py  pyproject.toml  requirements.txt  Без названия.ipynb
account/: admin.py  models.py
account/migrations/: 0001_initial.py
catalog/: admin.py  factories.py  models.py
catalog/management/commands/: create_dummy_catalog.py
catalog/migrations/: 0001_initial.py  0002_product_price.py
example_models/: asgi.py  settings.py  urls.py  wsgi.py
orders/: admin.py  factories.py  models.py
orders/migrations/: 0001_initial.py  0002_order_user.py  0003_alter_orderitem_order.py
pizza/: admin.py  factories.py  models.py
pizza/migrations/: 0001_initial.py  0002_auto_20211103_1821.py  0002_auto_20211115_1622.py
users/migrations/: 0001_initial.py
