[tool.poetry]
name = "example_models"
version = "0.1.0"
description = ""
authors = ["vladimir <volodymyr.dominion@myntelligence.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
